--- a/package.json
+++ b/package.json
@@ -57,9 +57,10 @@
     "nps-utils": "^1.1.2",
     "opt-cli": "^1.5.1",
     "prettier-eslint-cli": "^3.1.2",
-    "react": "^15.4.2",
-    "react-addons-test-utils": "^15.4.2",
-    "react-dom": "^15.4.2",
+    "prop-types": "^15.5.1",
+    "react": "^15.5.1",
+    "react-addons-test-utils": "^15.5.0",
+    "react-dom": "^15.5.1",
     "rollup": "^0.41.6",
     "rollup-plugin-babel": "^2.7.1",
     "rollup-plugin-commonjs": "^8.0.2",
